--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "scripts": {
     "start": "electron ."
   },
-  "dependencies": {},
+  "dependencies": {
+    "@electron/remote": "^2.0.8"
+  },
   "devDependencies": {
-    "electron": "12.0.0-beta.26"
+    "electron": "21"
   }
 }
